--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,10 @@
 	<packaging>war</packaging>
 
     <properties>
-        <org.springframework-version>3.2.3.RELEASE</org.springframework-version>
+        <org.springframework-version>3.2.4.RELEASE</org.springframework-version>
         <org.springframework.security-version>3.2.0.M2</org.springframework.security-version>
-        <org.hibernate-version>4.2.3.Final</org.hibernate-version>
+        <org.springframework.data.jpa-version>1.3.4.RELEASE</org.springframework.data.jpa-version>
+        <org.hibernate-version>4.2.4.Final</org.hibernate-version>
         <org.aspectj-version>1.6.10</org.aspectj-version>
         <org.slf4j-version>1.6.6</org.slf4j-version>
         <java-version>1.7</java-version>
@@ -131,11 +132,6 @@
             <version>${org.springframework-version}</version>
         </dependency>
         <dependency>
-            <groupId>cglib</groupId>
-            <artifactId>cglib</artifactId>
-            <version>2.2</version>
-        </dependency>
-        <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-core</artifactId>
             <version>${org.springframework.security-version}</version>
@@ -155,6 +151,17 @@
                     <artifactId>spring-jdbc</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>${org.springframework.data.jpa-version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>2.2</version>
         </dependency>
 
         <!-- Tests -->
