--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
     <properties>
         <org.springframework-version>3.2.4.RELEASE</org.springframework-version>
-        <org.springframework.security-version>3.2.0.M2</org.springframework.security-version>
+        <org.springframework.security-version>3.2.0.RC1</org.springframework.security-version>
         <org.springframework.data.jpa-version>1.3.4.RELEASE</org.springframework.data.jpa-version>
         <org.hibernate-version>4.2.4.Final</org.hibernate-version>
         <org.aspectj-version>1.6.10</org.aspectj-version>
