--- a/pom.xml
+++ b/pom.xml
@@ -368,6 +368,23 @@
         				</lifecycleMappingMetadata>
         			</configuration>
         		</plugin>
+                <plugin>
+                    <groupId>com.github.searls</groupId>
+                    <artifactId>jasmine-maven-plugin</artifactId>
+                    <version>1.3.1.2</version>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>test</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <!-- configuration properties will go here -->
+                        <jsSrcDir>${project.basedir}/src/main/webapp/resources</jsSrcDir>
+                        <sourceEncoding>utf-8</sourceEncoding>
+                    </configuration>
+                </plugin>
         	</plugins>
         </pluginManagement>
     </build>
