--- a/pom.xml
+++ b/pom.xml
@@ -7,14 +7,14 @@
     <packaging>war</packaging>
 
     <properties>
-        <org.springframework-version>3.2.4.RELEASE</org.springframework-version>
-        <org.springframework.security-version>3.2.0.RC1</org.springframework.security-version>
+        <org.springframework-version>4.1.6.RELEASE</org.springframework-version>
+        <org.springframework.security-version>4.0.0.RELEASE</org.springframework.security-version>
         <org.springframework.data-mongo-version>1.3.3.RELEASE</org.springframework.data-mongo-version>
         <org.springframework.data-version>1.3.3.RELEASE</org.springframework.data-version>
         <org.hibernate-version>4.2.4.Final</org.hibernate-version>
         <org.aspectj-version>1.6.10</org.aspectj-version>
         <org.slf4j-version>1.6.6</org.slf4j-version>
-        <java-version>1.7</java-version>
+        <java-version>1.8</java-version>
         <slf4j.version>1.7.5</slf4j.version>
         <logback.version>1.0.13</logback.version>
         <querydsl.version>2.9.0</querydsl.version>
