Ajusta para a autenticação em memória para os user padrão user e admin. Remove página inicial sem conteúdo e direciona página incial para home.

--- a/src/main/webapp/web.xml
+++ b/src/main/webapp/web.xml
@@ -20,4 +20,8 @@
     <listener>
         <listener-class>net.bull.javamelody.SessionListener</listener-class>
     </listener>
+
+    <welcome-file-list>
+        <welcome-file>home</welcome-file>
+    </welcome-file-list>
 </web-app>
